--- a/control-1.0.1.css
+++ b/control-1.0.1.css
@@ -1,4 +1,4 @@
-html,body{font-size:12px;font-family:"寰蒋闆呴粦","microsoft yahei";padding:0;margin:0;text-align:center;background:#999;}
+html,body{font-size:12px;font-family:"微软雅黑","microsoft yahei";padding:0;margin:0;text-align:center;background:#999;}
 body{overflow:hidden;}
 .toolbar,.drop{margin:0 auto;position:relative;z-index:100;overflow:visible;}
 .drop{width:30px;height:30px;margin-top:-15px;}
